[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Fonts/Revamped.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16 Monospaced.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Backgrounds/logo_3.png" type="Texture" id=3]
[ext_resource path="res://game/UI/Menus/PresentationMenu.gd" type="Script" id=4]
[ext_resource path="res://game/UI/Menus/LoginMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Sounds/Music/presentation_1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://game/UI/Menus/Buttons/ExitButton2.tscn" type="PackedScene" id=8]


[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 8
outline_color = Color( 0.203922, 0.203922, 0.203922, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "presentation"
length = 7.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/Loading2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, false, true, true, true, false, true, true, true, false, true, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/Loading3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true, false, false, true, true, false, false, true, true, false, false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/Loading4:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, true, false, false, false, true, false, false, false, true, false, false, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Plus:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Studio:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -246.991, 47.5561 ), Vector2( 359.518, 47.5561 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("logo_3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1183.95, 264.343 ), Vector2( 561.481, 264.343 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Powered:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 921.965, 206.276 ), Vector2( 299.495, 206.276 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Presents:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 12.5533, 1 ),
"update": 0,
"values": [ Vector2( 360.746, 602.5 ), Vector2( 360.746, 419.205 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Presents:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 8.28211, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 7.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_user"
} ]
}

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 7 )

[node name="PresentationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 479.679 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Studio" parent="." instance=ExtResource( 8 )]

[node name="Presents" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 360.746
margin_top = 602.5
margin_right = 613.746
margin_bottom = 640.5
custom_fonts/font = SubResource( 1 )
text = "Presentan"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 359.274
margin_top = 123.08
margin_right = 601.274
margin_bottom = 166.08
custom_fonts/font = SubResource( 2 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Powered" type="Label" parent="."]
margin_left = 921.965
margin_top = 206.276
margin_right = 1163.97
margin_bottom = 326.276
custom_fonts/font = SubResource( 1 )
text = "Godot
Game
Engine"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo_3" type="Sprite" parent="."]
position = Vector2( 1183.95, 264.343 )
scale = Vector2( 0.450305, 0.450305 )
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -119.55
margin_top = -43.8
margin_right = -8.55005
margin_bottom = -3.80005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Label" parent="HBoxContainer"]
margin_top = 9.0
margin_right = 72.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Cargando"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading2" type="Label" parent="HBoxContainer"]
visible = false
margin_left = 76.0
margin_top = 9.0
margin_right = 85.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading3" type="Label" parent="HBoxContainer"]
visible = false
margin_left = 89.0
margin_top = 9.0
margin_right = 98.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading4" type="Label" parent="HBoxContainer"]
visible = false
margin_left = 102.0
margin_top = 9.0
margin_right = 111.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "presentation"
anims/presentation = SubResource( 4 )

[node name="LoginMenu" parent="." instance=ExtResource( 5 )]
visible = false
next_scene = "res://game/UI/Menus/MainMenu.tscn"
is_tester = false

[node name="LogPanel" parent="LoginMenu" index="3"]
margin_top = -178.471
margin_bottom = 92.5287

[node name="User" parent="LoginMenu/LogPanel/ColorRect" index="0"]
margin_top = -13.0758
margin_bottom = 19.9242

[node name="Pass" parent="LoginMenu/LogPanel/ColorRect" index="1"]
visible = false

[node name="UserInput" parent="LoginMenu/LogPanel/ColorRect" index="2"]
margin_top = -12.6757
margin_bottom = 20.3243

[node name="PassInput" parent="LoginMenu/LogPanel/ColorRect" index="3"]
visible = false

[node name="Title" parent="LoginMenu/LogPanel/ColorRect/ColorRect" index="0"]
margin_left = -128.147
margin_right = 156.853
text = "Log Usuario"

[node name="Error" parent="LoginMenu" index="4"]
margin_top = 361.573
margin_bottom = 404.573

[node name="OK" parent="LoginMenu" index="5"]
margin_top = 361.573
margin_bottom = 404.573

[node name="Searching" parent="LoginMenu" index="6"]
margin_top = 364.029
margin_bottom = 407.029

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="Sesion" type="Label" parent="."]
visible = false
margin_left = 394.71
margin_top = 486.938
margin_right = 565.71
margin_bottom = 512.938
custom_fonts/font = SubResource( 5 )
text = "Iniciando Sesion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewUser" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -127.0
margin_right = 214.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="NewUser"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 118.0
margin_right = -2.0
color = Color( 0.341176, 0.309804, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewUser/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.5
margin_right = 143.5
margin_bottom = 49.0
custom_fonts/font = SubResource( 6 )
text = "El Usuario no existe
Â¿Desea registrarlo y reiniciar?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" parent="NewUser/ColorRect/Label" instance=ExtResource( 8 )]
margin_top = 34.8706
margin_bottom = 68.8706

[node name="OK" parent="NewUser/ColorRect/Label" instance=ExtResource( 8 )]
margin_left = 21.9476
margin_top = 34.8706
margin_right = 160.948
margin_bottom = 68.8706
text = "OK"
[connection signal="pressed" from="NewUser/ColorRect/Label/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="NewUser/ColorRect/Label/OK" to="." method="_on_OK_pressed"]

[editable path="LoginMenu"]

[editable path="NewUser/ColorRect/Label/OK"]
